# RaspberryKMBox

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  HUMANIZATION.md  PIOKMbox.c  README.md  bridge_handler.c  bridge_handler.h  bridge_protocol.h  build.sh  dcp_helpers.S  dcp_helpers.h  defines.h  humanization_fpu.c  humanization_fpu.h  humanization_lut.c  humanization_lut.h  kmbox_interface.c  kmbox_serial_handler.c  kmbox_serial_handler.h  led_control.c  led_control.h  side_channel.c  side_channel.h  smooth_injection.c  smooth_injection.h  spi_slave.c  spi_slave.h  spi_slave.pio  state_management.c  state_management.h  tusb_config.h  uart_buffers.h  usb_hid.c  usb_hid.h  usb_hid_reports.c  usb_hid_stats.c  watchdog.c  xbox_device.c  (+4 more)
.github/workflows/: build-release.yml
boards/: adafruit_metro_rp2350.h
bridge/: CMakeLists.txt  README.md  bridge_client.py  bridge_protocol.h  build.sh  config.h  core1_translator.c  core1_translator.h  fast_commands.h  ferrum_protocol.h  ferrum_translator.c  ferrum_translator.h  ft6206_touch.c  hw_uart.c  hw_uart.h  ili9341.c  input_classifier.h  latency_tracker.c  latency_tracker.h  main.c  main_feather.c  makcu_protocol.h  makcu_translator.c  makcu_translator.h  neopixel_dma.c  neopixel_dma.h  pio_dma.c  pio_dma.h  protocol_luts.c  protocol_luts.h  st7735.c  tft.c  tft.h  tft_config.h  tft_display.c  tft_display.c.old  tft_display.h  timestamp.pio  tracker.c  tracker.h  (+7 more)
bridge-fpga/: CMakeLists.txt  IMPLEMENTATION.md  README.md  WIRING.md  bin2header.py  bridge_fpga_regs.h  config.h  fpga_spi.c  fpga_spi.h  fpga_spi.pio  fpga_uart.c  fpga_uart.h  ft6206_touch.c  ft6206_touch.h  ili9341.c  main.c  side_channel.c  side_channel.h  tft.c  tft_config.h  tft_display.c  tft_display.h  tracker.c  tracker.h  tusb_config.h  usb_descriptors.c
bridge-fpga/rtl/: bridge_engine.v  bridge_engine_spi.v  bridge_regs.vh  pico2_ice_bridge.pcf  spi_master.v  spi_target.v  sync_fifo.v  top.v  uart_rx.v  uart_tx.v
lib/bridge-protocol/: CMakeLists.txt  README.md  bridge_handler.c  bridge_pio.c  bridge_pio.h  bridge_protocol.h  bridge_rx.pio  bridge_tx.pio  bridge_uart_rx.pio  bridge_uart_tx.pio
lib/dma-uart/: CMakeLists.txt
lib/dma-uart/include/: dma_uart.h
lib/fast-protocol/: CMakeLists.txt
lib/fast-protocol/include/: fast_protocol.h
lib/hid-defs/: CMakeLists.txt
lib/hid-defs/include/: hid_defs.h
lib/kmbox-commands/: CMakeLists.txt  kmbox_commands.c  kmbox_commands.h
lib/led-utils/: CMakeLists.txt
lib/led-utils/include/: led_color.h
lib/peri-clock/: CMakeLists.txt  peri_clock.c
lib/peri-clock/include/: peri_clock.h
lib/wire-protocol/: CMakeLists.txt
lib/wire-protocol/include/: wire_protocol.h
tools/: Makefile  README.md  generate_lut.py  kmbox_relay  kmbox_relay.c  kmbox_stress_test.py  mouse_counteract  mouse_counteract.c  quick_test.sh  serial_echo_test  serial_echo_test.c  test_bridge_responses.sh  test_serial.py
tools/bridge_client/: bridge_client.py
tools/cp2110_client/: README.md  cp2110_kmbox.py
tools/mcp2210_client/: README.md  gpio_debug.py  gpio_toggle_test.py  mcp2210_kmbox.py  monitor_miso.py  spi_debug.py  spi_detailed.py  spi_reset.py  spi_scope_test.py  spi_verify.py
